--- a/test.html
+++ b/test.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <br>
-                    <!-- 第三個輸入 - 留言 -->
+                    <!-- 第三個輸入 - 請留言 -->
                     <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
                     <div class="row">
                         <div class="col-sm-12 form-group">
