--- a/test.html
+++ b/test.html
@@ -72,7 +72,7 @@
                     </div>
                     <br>
                     <!-- 第三個輸入 - 請留言 -->
-                    <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+                    <textarea class="form-control" id="comments" name="comments" placeholder="Please Comment" rows="5"></textarea>
                     <div class="row">
                         <div class="col-sm-12 form-group">
                             <button class="btn " type="submit" id="submitButton">送出Submit</button>
